rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__show_max_identifier_length.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"show max_identifier_length;\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+---------+
| setting |
+---------+
| 63      |
+---------+
