rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__show_processlist.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 5676
expression: "execute_query(\"SHOW processlist\".to_string(), DatabaseProtocol::MySQL).await?"
---
+----+------+-----------+----+---------+------+------------------------+------+
| ID | USER | HOST      | DB | COMMAND | TIME | STATE                  | INFO |
+----+------+-----------+----+---------+------+------------------------+------+
| 1  | ovr  | 127.0.0.1 | db | daemon  | 0    | Waiting on empty queue | NULL |
+----+------+-----------+----+---------+------+------------------------+------+
