rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__show_tables_everything.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 8017
expression: "execute_query(\"show full tables from db like '%';\".to_string(),\n            DatabaseProtocol::MySQL).await?"
---
+---------------------------+------------+
| Tables_in_db              | Table_type |
+---------------------------+------------+
| KibanaSampleDataEcommerce | BASE TABLE |
| Logs                      | BASE TABLE |
| NumberCube                | BASE TABLE |
| WideCube                  | BASE TABLE |
| MultiTypeCube             | BASE TABLE |
+---------------------------+------------+
