rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__show_tables_from_db.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 8011
expression: "execute_query(\"show tables from db;\".to_string(),\n            DatabaseProtocol::MySQL).await?"
---
+---------------------------+
| Tables_in_db              |
+---------------------------+
| KibanaSampleDataEcommerce |
| Logs                      |
| NumberCube                |
| WideCube                  |
| MultiTypeCube             |
+---------------------------+
