rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__show_tables_like.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 4690
expression: "execute_query(\"show tables like '%ban%';\".to_string(),\n            DatabaseProtocol::MySQL).await?"
---
+---------------------------+
| Tables_in_db              |
+---------------------------+
| KibanaSampleDataEcommerce |
+---------------------------+
