rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__show_tables_simple.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 7979
expression: "execute_query(\"show tables;\".to_string(), DatabaseProtocol::MySQL).await?"
---
+---------------------------+
| Tables_in_db              |
+---------------------------+
| KibanaSampleDataEcommerce |
| Logs                      |
| NumberCube                |
| WideCube                  |
| MultiTypeCube             |
+---------------------------+
