rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__show_tables_where.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 4159
expression: "execute_query(\"show tables where Tables_in_db = 'Logs';\".to_string()).await?"

---
+--------------+
| Tables_in_db |
+--------------+
| Logs         |
+--------------+
