rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__show_variable_quoted.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"show \\\"max_allowed_packet\\\";\".to_string(),\n              DatabaseProtocol::PostgreSQL).await?"
---
+----------+
| setting  |
+----------+
| 67108864 |
+----------+
