rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__show_variables_like.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"show variables like '%_mode';\".to_string(),\n              DatabaseProtocol::MySQL).await?"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------+
| Variable_name | Value                                                                                                                 |
+---------------+-----------------------------------------------------------------------------------------------------------------------+
| sql_mode      | ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION |
+---------------+-----------------------------------------------------------------------------------------------------------------------+
