rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__show_variables_like_aurora.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"show variables like 'aurora_version';\".to_string(),\n            DatabaseProtocol::MySQL).await?"
---
+---------------+-------+
| Variable_name | Value |
+---------------+-------+
+---------------+-------+
